--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -42,13 +42,13 @@
             android:background="@android:drawable/btn_dropdown"
             android:foregroundGravity="right"
             android:spinnerMode="dropdown"
-            app:layout_constraintBottom_toTopOf="@+id/button_first"
+            app:layout_constraintBottom_toTopOf="@+id/button_search"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textview_first" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/button_first"
+            android:id="@+id/button_search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/button_style"
