--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -25,7 +25,7 @@
             android:layout_marginHorizontal="16dp"
             android:background="@drawable/rounded_edittext"
             android:gravity="center"
-            android:hint="Insert your Nick"
+            android:hint="@string/textview_insert_your_nick"
             android:inputType="textWebEmailAddress"
             android:padding="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -52,7 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/button_style"
-            android:text="search"
+            android:text="@string/button_search"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
