--- a/app/src/main/res/layout/item_textview.xml
+++ b/app/src/main/res/layout/item_textview.xml
@@ -2,6 +2,9 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:textSize="20sp"
     android:padding="10dp"
-    />
+    android:background="@color/secondaryColor"
+    android:textColor="@color/primaryDarkColor"
+    tools:text="teste" />
