--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,7 +10,7 @@
         android:background="@color/primaryDarkColor"
         tools:context=".presentation.homeFragment.HomeFragment">
 
-        <androidx.appcompat.widget.AppCompatImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:tint="@color/secondaryColor"
@@ -18,7 +18,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_lol_gg" />
+            android:src="@drawable/ic_lol_gg" />
 
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/edittext_summoner_name"
