--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/primaryDarkColor"
-        tools:context=".presentation.loadingFragment.LoadingFragment">
+        tools:context=".presentation.resultFragment.ResultFragment">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolBar"
