--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -11,22 +11,22 @@
         tools:layout="@layout/fragment_home">
 
         <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/LoadingFragment" >
+            android:id="@+id/action_HomeFragment_to_Result"
+            app:destination="@id/ResultFragment" >
             <argument
                 android:name="puuId"
                 app:argType="string"/>
         </action>
     </fragment>
     <fragment
-        android:id="@+id/LoadingFragment"
-        android:name="com.example.lolgg.presentation.loadingFragment.LoadingFragment"
-        tools:layout="@layout/fragment_loading">
+        android:id="@+id/ResultFragment"
+        android:name="com.example.lolgg.presentation.resultFragment.ResultFragment"
+        tools:layout="@layout/fragment_result">
         <argument
             android:name="puuId"
             app:argType="string"/>
         <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
+            android:id="@+id/action_ResultFragment_to_HomeFragment"
             app:destination="@id/HomeFragment" />
     </fragment>
 </navigation>
