--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,6 +11,7 @@
         tools:context=".presentation.homeFragment.HomeFragment">
 
         <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/circle_image_view_logo"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:tint="@color/secondaryColor"
@@ -73,5 +74,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/spinner_regions" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
